@@ -1,0 +1,123 @@
+// Copyright (C) 2019   John Donoghue   <john.donoghue@ieee.org>
+//
+// This program is free software; you can redistribute it and/or modify
+// it under the terms of the GNU General Public License as published by
+// the Free Software Foundation; either version 3 of the License, or
+// (at your option) any later version.
+//
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+//
+// You should have received a copy of the GNU General Public License
+// along with this program; if not, see <http://www.gnu.org/licenses/>.
+
+#ifdef HAVE_CONFIG_H
+#include "../config.h"
+#endif
+
+#ifdef BUILD_SERIAL
+#include "serial_class.h"
+
+octave_serial_common::octave_serial_common ()
+ : fieldnames(13)
+{
+  fieldnames[0] = "baudrate";
+  fieldnames[1] = "bytesize";
+  fieldnames[2] = "dataterminalready";
+  fieldnames[3] = "parity";
+  fieldnames[4] = "pinstatus";
+  fieldnames[5] = "requesttosend";
+  fieldnames[6] = "stopbits";
+  fieldnames[7] = "timeout";
+  fieldnames[8] = "bytesavailable";
+  fieldnames[9] = "status";
+  fieldnames[10] = "name";
+  fieldnames[11] = "type";
+  fieldnames[12] = "port";
+}
+
+octave_value_list
+octave_serial_common::subsref (const std::string& type, const std::list<octave_value_list>& idx, int nargout)
+{
+  octave_value_list retval;
+  int skip = 1;
+
+  switch (type[0])
+    {
+    default:
+      error ("octave_serial object cannot be indexed with %c", type[0]);
+      break;
+    case '.':
+      {
+        octave_value_list ovl;
+        // inc ref count as assign this to octave_value
+        count++; 
+        ovl (0) = octave_value (this);
+        ovl (1) = (idx.front ()) (0);
+        retval = OCTAVE__FEVAL (std::string ("__srl_properties__"), ovl, 1);
+      }
+      break;
+    }
+
+  if (idx.size () > 1 && type.length () > 1)
+    retval = retval (0).next_subsref (nargout, type, idx, skip);
+
+  return retval;
+}
+
+octave_value
+octave_serial_common::subsasgn (const std::string& type, const std::list<octave_value_list>& idx, const octave_value& rhs)
+{
+  octave_value retval;
+
+  switch (type[0])
+    {
+    default:
+      error ("octave_serial object cannot be indexed with %c", type[0]);
+      break;
+    case '.':
+      if (type.length () == 1)
+        {
+          octave_value_list ovl;
+          // inc ref count as assign this to octave_value
+          count++; 
+          ovl (0) = octave_value (this);
+          ovl (1) = (idx.front ()) (0);
+          ovl (2) = rhs;
+          OCTAVE__FEVAL (std::string ("__srl_properties__"), ovl, 1);
+ 
+          // property assignment
+          if (! error_state)
+            {
+              count++;
+              retval = octave_value (this);
+            }
+        }
+      else if (type.length () > 1 && type[1] == '.')
+        {
+          // pass along any further assignments
+          octave_value_list u = subsref (type.substr (0, 1), idx, 1);
+          if (! error_state)
+            {
+              std::list<octave_value_list> next_idx (idx);
+              next_idx.erase (next_idx.begin ());
+              u (0).subsasgn(type.substr (1), next_idx, rhs);
+              if (!error_state)
+                {
+                  count++;
+                  retval = octave_value (this);
+                }
+            } 
+        }
+      else
+        {
+          error ("octave_serial invalid index");
+        }
+
+    }
+  return retval;
+}
+
+#endif
